# Simple-WebAuthn-Passkey-Authentication-Demo

./: .env  README.md
backend/: pyproject.toml
backend/app/: config.py  db.py  factory.py  main.py
backend/app/api/: auth.py
backend/app/core/: dependencies.py  encoding.py  redis_manager.py
backend/app/core/passkey/: passkey_manager.py
backend/app/models/: credential.py  user.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/pages/: About.tsx  Home.tsx  Login.tsx  Me.tsx
frontend/src/stores/: auth.ts
